--- a/server/public/style.css
+++ b/server/public/style.css
@@ -1,4 +1,9 @@
-this is my css
+/* palette
+#142d4c
+#385170
+#9fd3c7
+#ececec
+*/
 body{
     background-color: rgb(255, 255, 255);
     margin: 0;
@@ -6,7 +11,12 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  
+  font-style: normal;
 }
+
 .top-part a {
     color: inherit;
     text-decoration: none;
@@ -24,7 +34,7 @@ a {
     color: inherit; /* Ensures the color stays the same after being clicked */
   }
 .top-part{
-    background-color: rgb(20, 125, 3);
+    background-color: #142d4c;
     width:100vw;
     height: auto;
     margin: 0;
@@ -32,15 +42,18 @@ a {
     padding: 10px 0;
     box-sizing: border-box;
     text-align: center;
+    color: #ececec;
 }
+
 .feature{
     display: flex;
-    background-color:rgb(10, 99, 31);
+    background-color:#142d4c;
+    color:#ececec;
     justify-content: space-around;
 }
 
 .option{
-    background-color: rgb(11, 152, 79);
+    background-color: #385170;
     padding: 10px;
     margin: 5px;
     flex-grow:1;
@@ -80,9 +93,10 @@ footer{
     display:grid;
     grid-template-rows: 300px 500px;
     grid-template-columns: 1fr 1fr;
+    background-color: #9fd3c7;
 }
 .home-box{
-    background-color: rgb(20, 125, 3);
+    background-color:  #385170;
     margin:10px;
     padding: 10px;
     border-radius: 10px;
@@ -102,7 +116,7 @@ footer{
 .page-add{
     display:flex;
     flex-direction:column;
-    background-color: aquamarine;
+    background-color:  #9fd3c7;
     align-items:center;
     padding:150px 0 150px 0;
     
@@ -123,4 +137,133 @@ footer{
 }
 .spending-info input{
     border-radius: 5px;
+}
+
+
+
+/*history page*/
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+}
+
+table, th, td {
+    border: 1px solid #333; /* Dark border */
+}
+
+th, td {
+    padding: 12px 15px; /* Add padding for better spacing */
+    text-align: left;
+}
+
+th {
+    background-color: #f4f4f4; /* Light background for header */
+}
+
+tbody tr:nth-child(even) {
+    background-color: #f9f9f9; /* Add zebra striping */
+}
+.history-content{
+    background-color: #9fd3c7;
+}
+.history-container {
+    
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+/* connect page */
+.content-connect{
+    background-color: #9fd3c7;
+}
+.title-connect{
+    margin-bottom: 20p;
+}
+.container-connect{
+    width:80%;
+    margin:50px auto;
+     
+}
+.contact-box{
+    background-color: #142d4c;
+    display:flex;
+}
+.contact-left{
+    flex-basis: 60%;
+    padding:40px 60px;
+}
+.contact-right{
+    flex-basis: 40%;
+    padding:40px;
+    background-color:#385170;
+}
+
+
+.input-row{
+    display:flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.input-row .input-group{
+    flex-basis: 45%;
+}
+input{
+    width:100%; 
+    border:none;
+    border-bottom: 1px solid #ccc;
+    outline:none;
+    padding-bottom:5px; 
+}
+.contact-left form textarea{
+     width:100%;
+     border:1px solid #ccc;
+     outline:none;
+     padding:10px;
+     box-sizing: border-box ;
+}
+.contact-left label{
+    margin-bottom: 6px;
+    display: block;
+    color:#ececec;
+}
+
+.contact-left button{
+    color: #142d4c;
+    background-color: #fff;
+    width: 100px;
+    border:none;
+    outline:none;
+    height: 35px;
+    border-radius: 30px;
+    margin-top:20px;
+    box-shadow: 0px 5px 15px 0px rgba(28,0,181,0.3);
+}
+
+.contact-left h3{
+     color:#ececec;
+     font-weight: 600;
+     margin-bottom: 30px;
+}
+
+.contact-right table {
+    outline: none;
+    border: none;
+    width: 100%;
+    border-spacing: 0;
+}
+
+.contact-right table tr td {
+    padding: 10px 20px;
+    text-align: left;
+    border: none;
+    vertical-align: middle;
+    background-color:#9fd3c7; 
+}
+
+.contact-right table tr td:first-child {
+    padding-right: 20px;
+    font-weight: bold; 
 }
