Initial commit: Added Budget Tracker project

--- a/server/views/connect.ejs
+++ b/server/views/connect.ejs
@@ -14,7 +14,7 @@
         <div class="contact-box">
             <div class="contact-left">
                 <h3>send your request</h3>
-                <form action="/contact" method="POST">
+                <form action="/connect" method="POST">
                     <div class="input-row">
                         <div class="input-group">
                             <div class="connect-label">
