--- a/server/views/partials/head.ejs
+++ b/server/views/partials/head.ejs
@@ -10,8 +10,7 @@
 </head>
 
 <div class="top-part">
-    <a href="/"><h1>Budget Tracker</h1></a>
-    <p>smth smth smth smth smth</p>
+    <a href="/">Budget Tracker</a>
 </div>
 <div class="feature">
     <div class="option one">
@@ -20,11 +19,9 @@
     <div class="option two">
         <a href="/history">See History</a>
     </div>
-    <div class="option three">
-        <a href="/update">Update Information</a>
-    </div> 
+
     <div class="option four">
-        <a href="/contact">Contact Us</a>
+        <a href="/connect">Connect with Us</a>
     </div>
 </div>
 
