--- a/server/views/history.ejs
+++ b/server/views/history.ejs
@@ -1,39 +1,49 @@
 <!DOCTYPE html>
-<html lang = "en">
-<%- include('./partials/head.ejs')%>
+<html lang="en">
+<%- include('./partials/head.ejs') %>
 
 <body>   
     <div class="history-content">
-    <div class="history-container">
-        <table>
-            <thead>
-                <tr>
-                    <th>Description</th>
-                    <th>Amount</th>
-                    <th>Category</th>
-                    <th>Date</th>
-                </tr>
-            </thead>
-            <tbody>
+        <div class="container">
+            <div class="history-records">
                 <% if (show.length > 0) { %>
                     <% show.forEach(function(record) { %>
-                        <tr>
-                            <td><%= record.description %></td>
-                            <td>$<%= record.amount.toFixed(2) %></td>
-                            <td><%= record.cat %></td>
-                            <td><%= record.createdAt.toDateString() %></td>
-                        </tr>
+                        <div class="history-record">
+                            <div class="history-field"><%- record.description %></div>
+                            <div class="history-field">€<%- record.amount %></div>
+                            <div class="history-field"><%- record.cat %></div>
+                            <div class="history-field"><%- record.createdAt.toDateString() %></div>
+                            <a class="delete" data-doc="<%= record._id %>">Delete</a>
+                        </div>
                     <% }) %>
                 <% } else { %>
-                    <tr>
-                        <td colspan="4">No spending history found.</td>
-                    </tr>
+                    <div class="history-field">No spending history</div>
                 <% } %>
-            </tbody>
-        </table>
+            </div>
+        </div>
     </div>
     
-    <%- include('./partials/footer.ejs')%>
-</div> 
+    <%- include('./partials/footer.ejs') %>
+
+    <script>
+        // Select all delete buttons
+        const deleteButtons = document.querySelectorAll('a.delete');
+
+        // Loop through each delete button and add an event listener
+        deleteButtons.forEach(button => {
+            button.addEventListener('click', (e) => {
+                e.preventDefault(); // Prevent default link behavior
+
+                const endpoint = `/blogs/${button.dataset.doc}`;
+
+                fetch(endpoint, {
+                    method: 'DELETE'
+                })
+                .then(response => response.json())
+                .then(data => window.location.href = data.redirect)
+                .catch(err => console.log('error:', err));
+            });
+        });
+    </script>
 </body>
 </html>
